+ add padding to prevent text overlaying collapse icon

--- a/source/sass/component/_table.scss
+++ b/source/sass/component/_table.scss
@@ -99,6 +99,10 @@
         cursor:pointer;
     }
 
+    th.c-table__column-0 {
+        padding-right: calc(#{$base} * 6);
+    }
+
     &__inner {
         display: block;
         overflow-x: auto;
@@ -133,8 +137,8 @@
 
         .c-table__collapse-button {
             cursor: pointer;
-            right: calc(#{$base} * 4);
-        }    
+            right: calc(#{$base} * 3);
+        }
     }
 
     td.c-table__column {
